gcc/testsuite/rust/rustc/ui/parser/mismatched-delim-brace-empty-block.rs
fn main() {

}
    let _ = ();
} // { dg-error "" "" { target *-*-* } }

